# data-sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
tests/: test_mapping.py
utils/: mapping.py
