[tool.poetry]
name = "county_to_region_mapping"
version = "0.1.0"
description = ""
authors = ["kevinhowbrook <kbhowbrook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
coverage = "^5.0.1"
pytest = "^5.3.2"
pytest-cov = "^2.8"
pytest-black = "^0.3.7"
pytest-flake8 = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
